Fixed overflowing issues on orderpad component as well as minor UI updates in other components

--- a/client/src/css/mainscreen/homescreen-styles.css
+++ b/client/src/css/mainscreen/homescreen-styles.css
@@ -26,6 +26,7 @@
     align-items: center;
     justify-content: center;
     width: 95%;
+   margin: 1rem 0 2.5rem;
     
 }
 .categorybtns{
@@ -33,7 +34,7 @@
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: 10vh;
+    height: 15vh;
     max-height: 10rem;
     font-size: 1em;
     margin: .3rem;
@@ -66,6 +67,7 @@ h6{
     width: 100%;
     font-size: 1em;
     margin: 0;
+    text-align: center;
 }
 .btnimg{
     width: 100%;
@@ -73,11 +75,13 @@ h6{
     padding-bottom: 2;
 }
 
-@media(min-width:768px) {
+@media(min-width:1026px) {
+    h6{
+        text-align: left;
+    }
     .mainwrap {
         background-color: #E9EDEB;
         display: flex;
-        flex-direction: row;
         justify-content: center;
         align-items: center;
         height: 100%;
@@ -101,4 +105,22 @@ h6{
     }
 
         
+}
+@media(max-width:768px) {
+    .categorybtnswrap{
+        margin-top: 3rem;
+    }
+    .checkmarksvg{
+        justify-content: center
+    }
+    .tipinput{
+        width: 4rem;
+    }
+    
+}
+@media(min-width:1024px) {
+    .mainwrap {
+        flex-direction: row;
+       
+    }
 }
