--- a/client/src/css/utility/cashoutcomponent.css
+++ b/client/src/css/utility/cashoutcomponent.css
@@ -1,23 +1,27 @@
 .cashoutscreenbody{
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: flex-start;
     min-height: 100vh;
 }
 .employeedatasectionwrap{
-    width: 80%;
-    max-width: 40rem;
-    border: solid 1px black;
-    padding: 1rem;
-    border-radius: 0.5rem;
-    align-self: flex-start;
-    margin-top:1rem;
-    margin-left: 1rem;
+    display: flex;
+    justify-content: flex-start;
+    flex-flow: row wrap;
+    align-items: center;
+    margin: 1rem .25rem;
+    max-width: 25rem;
+    padding: 0 1rem;
 }
 .employeedata{
     border-bottom: solid 2px;
     margin: .25rem;
     padding-left: .5rem;
+}
+.cashoutbtnswrap{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .cashoutbtn{
     width: 80%;
@@ -29,9 +33,11 @@
     color: white;
     background-color: #283F53;
     font-weight: 600;
+    margin-left: 2rem;
 }
 @media (min-width: 1024px){
     .cashoutbtn:hover{
         cursor: pointer;
+        opacity: .8;
     }
 }
